[gd_scene load_steps=4 format=3 uid="uid://15ocw3k1btix"]

[ext_resource type="PackedScene" uid="uid://cgaiiiewvrg7f" path="res://Scene/Element/app_window.tscn" id="1_0v5wk"]
[ext_resource type="Script" uid="uid://2v52bb262as6" path="res://Resource/App/AntiVirus3000/anti_virus_3000_window.gd" id="1_twwt8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mt85"]

[node name="AntiVirus3000Window" instance=ExtResource("1_0v5wk")]
script = ExtResource("1_twwt8")
damage = 5
is_transparent_body = true
app_window_name = "Anti virus 3000"
ram_cost = 16.0

[node name="Body" parent="MarginContainer/VBoxContainer" index="1"]
mouse_filter = 2

[node name="HittingBox" type="Area2D" parent="MarginContainer/VBoxContainer/Body" index="1"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/VBoxContainer/Body/HittingBox" index="0"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_1mt85")

[node name="OnOffHittingTimer" type="Timer" parent="MarginContainer/VBoxContainer/Body" index="2"]
wait_time = 0.2
autostart = true

[connection signal="resized" from="MarginContainer/VBoxContainer/Body" to="." method="_on_body_resized"]
[connection signal="area_entered" from="MarginContainer/VBoxContainer/Body/HittingBox" to="." method="_on_hitting_box_area_entered"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/Body/OnOffHittingTimer" to="." method="_on_on_off_hitting_timer_timeout"]
